- merged java 11 branch in this