@@ -2,6 +2,7 @@ package hzt.collections;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -10,36 +11,36 @@ class CollectionViewTest {
 
     @Test
     void testContainsAll() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "test");
+        Iterable<String> iterable = Arrays.asList("string", "test");
 
         assertTrue(strings.containsAll(iterable));
     }
 
     @Test
     void testDoesNotContainsAll() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "test", "not");
+        Iterable<String> iterable = Arrays.asList("string", "test", "not");
 
         assertFalse(strings.containsAll(iterable));
     }
 
     @Test
     void testContainsNoneOf() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("strings", "testa");
+        Iterable<String> iterable = Arrays.asList("strings", "testa");
 
         assertTrue(strings.containsNoneOf(iterable));
     }
 
     @Test
     void testDoesContainSome() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "tesst", "not");
+        Iterable<String> iterable = Arrays.asList("string", "tesst", "not");
 
         assertFalse(strings.containsAll(iterable));
     }
