@@ -29,7 +29,7 @@ public final class TestSampleGenerator {
     private static final Random RANDOM = new Random();
     private static final String FICTION = "Fiction";
 
-    private static final List<Function<Integer, Number>> TO_NUMBER_TYPE_FUNCTIONS = List.of(
+    private static final List<Function<Integer, Number>> TO_NUMBER_TYPE_FUNCTIONS = Arrays.asList(
             Integer::byteValue,
             Integer::shortValue,
             Integer::valueOf,
@@ -48,7 +48,7 @@ public final class TestSampleGenerator {
     }
 
     public static List<Book> createBookList() {
-        return List.of(new Book("Harry Potter", FICTION),
+        return Arrays.asList(new Book("Harry Potter", FICTION),
                 new Book("Lord of the Rings", FICTION),
                 new Book("Pragmatic Programmer", "Programming"),
                 new Book("OCP 11 Volume 1", "Programming"),
@@ -78,7 +78,7 @@ public final class TestSampleGenerator {
         vermeer.addPaintings(meisje_met_de_parel, meisje_met_de_rode_hoed, het_melkmeisje);
         vanGogh.addPaintings(lenteTuin, de_sterrennacht);
 
-        return List.of(guernica, lesDemoiselles, le_reve, meisje_met_de_parel, het_melkmeisje,
+        return Arrays.asList(guernica, lesDemoiselles, le_reve, meisje_met_de_parel, het_melkmeisje,
                 meisje_met_de_rode_hoed, lenteTuin, de_sterrennacht
         );
     }
@@ -100,15 +100,15 @@ public final class TestSampleGenerator {
         final List<Painting> picassoPaintings = groupedByLastName.get("Picasso");
 
         final var painter = new Painter("Hans", "Zuidervaart", LocalDate.of(1989, 10 ,18));
-        return List.of(
-                new Museum(null, null, List.of(new Painting("Test", painter, Year.of(1997), false))),
+        return Arrays.asList(
+                new Museum(null, null, Arrays.asList(new Painting("Test", painter, Year.of(1997), false))),
                 new Museum("Van Gogh Museum", LocalDate.of(1992, Month.APRIL, 2), vanGoghPaintings),
                 new Museum("Vermeer Museum", LocalDate.of(1940, Month.JANUARY, 23), vermeerPaintings),
                 new Museum("Picasso Museum", LocalDate.of(1965, Month.AUGUST, 4), picassoPaintings));
     }
 
     public static List<BankAccount> createSampleBankAccountList() {
-        return List.of(
+        return Arrays.asList(
                 new BankAccount("NL43INGB0008541648", new Customer("1", "Zuidervaart"), BigDecimal.valueOf(-4323)),
                 new BankAccount("BL54ABNA0004536472", new Customer("2", "Jansen"), BigDecimal.valueOf(234235.34)),
                 new BankAccount("NL32BUNQ0004358592", new Customer("3", "Vullings"), BigDecimal.valueOf(2342)),
